ebrains/prod-jsccloud/nest-desktop/ingresses/nest-desktop.apps.prod-jsccloud.ebrains.eu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":[""],"port":443,"protocol":"HTTPS","serviceName":"nest-desktop:nest-desktop","ingressName":"nest-desktop:nest-desktop.apps.prod-jsccloud.ebrains.eu","hostname":"nest-desktop.apps.prod-jsccloud.ebrains.eu","path":"/","allNodes":false}]
    traefik.ingress.kubernetes.io/router.middlewares: nest-desktop-nest-desktop-prod-redirect@kubernetescrd
  creationTimestamp: '2026-06-19T11:33:56Z'
  generation: 24
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: traefik
      operation: Update
      subresource: status
      time: '2026-06-19T13:06:27Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
            f:traefik.ingress.kubernetes.io/router.middlewares: {}
        f:spec:
          f:defaultBackend:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:port: {}
          f:ingressClassName: {}
          f:rules: {}
          f:tls: {}
      manager: agent
      operation: Update
      time: '2026-07-20T10:04:52Z'
  name: nest-desktop.apps.prod-jsccloud.ebrains.eu
  namespace: nest-desktop
  resourceVersion: '91597258'
  uid: 4c68bbb5-3e70-4173-ab4d-cee218444fce
spec:
  defaultBackend:
    service:
      name: nest-desktop
      port:
        number: 8080
  ingressClassName: traefik
  rules:
    - host: nest-desktop.apps.prod-jsccloud.ebrains.eu
      http:
        paths:
          - backend:
              service:
                name: nest-desktop
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nest-desktop.apps.prod-jsccloud.ebrains.eu
      secretName: nest-desktop-apps-prod-jsccloud-tls
status:
  loadBalancer:
    ingress:
      - hostname: ing.prod-jsccloud.ebrains.eu
